Revision history for Capture-Tiny

{{$NEXT}}

0.30      2015-05-15 20:43:54-04:00 America/New_York

  No changes from 0.29

0.29      2015-04-19 18:36:24+02:00 Europe/Berlin (TRIAL RELEASE)

  Fixed:

  - Fix double filehandle close error with tee on Windows
    (which started warning during the perl 5.21.x series,
    causing tests to fail)

0.28      2015-02-11 06:39:51-05:00 America/New_York

  Tests:

  - Removes test that optionally uses Inline::C to avoid spurious
    test failures.  Also Inline::C had become a fairly heavy
    (if optional) dependency.

  Docs:

  - Clarify that PERL_CAPTURE_TINY_TIMEOUT is an internal control,
    not a timeout of the code reference being captured.

0.27      2014-11-04 23:10:44-05:00 America/New_York

  Prereqs:

  - Make Inline::C recommended, not required

0.26      2014-11-04 06:55:15-05:00 America/New_York

  Tests:

  - Actually check for Inline::C in tests, not just Inline

0.25      2014-08-16 10:08:42-04:00 America/New_York

  Prereqs:

  - Amended recommended modules to list Inline::C rather than Inline

0.24      2014-02-06 17:15:37-05:00 America/New_York

  Fixed:

  - Closed security hole in use of semaphore file in /tmp;
    now opens the semaphore file using O_CREAT|O_EXCL
    
0.23      2013-10-20 11:25:34 America/New_York

  Fixed:

  - minimum Perl prereq is back to 5.6 (but $diety help you if
    you're still stuck on 5.6)

  Documented:

  - Added warning about using @_ in a capture block

0.22      2013-03-27 15:50:29 America/New_York

  Documented:

  - Issue tracker is now github

0.21      2012-11-14 19:04:49 America/New_York

  Changed:

  - Skips tee and leak tests for closed STDIN on Perl prior to
    5.12 when PERL_UNICODE=D.  Documented lack of support as
    a known issue.

  - Isolated tee subprocesses from effects of PERL_UNICODE as a
    precaution (though this did not fix the above issue).

  - Improved layer detection for handles proxied due to being closed
    or tied.
